add info api
