# docs/swagger.json
@@ -6,6 +6,29 @@
     "paths": {
         "/": {
             "get": {
+                "description": "Returns server information and request details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "default"
+                ],
+                "summary": "show server information",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.RequestResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/info": {
+            "get": {
                 "description": "Returns server information",
                 "consumes": [
                     "application/json"
@@ -21,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.Response"
+                            "$ref": "#/definitions/controllers.InfoResponse"
                         }
                     }
                 }
@@ -29,7 +52,18 @@
         }
     },
     "definitions": {
-        "controllers.Response": {
+        "controllers.InfoResponse": {
+            "type": "object",
+            "properties": {
+                "hostname": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.RequestResponse": {
             "type": "object",
             "properties": {
                 "body": {},
